# transmotify

./: .copilot-codeGeneration-instructions.md  .copilot-review-instructions.md  .gitignore  .repoignore  LICENSE  README.md  constants.py  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  speech-transcription-emotion-analysis.code-workspace  test.md
.github/workflows/: ci.yml
.idx/: dev.nix
.instructions/: instructions - logging and exception refactor.md
.roo/: mcp.json
analysis/: emotion_fusion.py  visualization.py
asr/: asr.py
config/: config.py  schema.py
core/: config.py  constants.py  emotion_analysis.py  errors.py  file_management.py  init.py  logging.py  multimodal_analysis.py  orchestrator.py  pipeline.py  plotting.py  preview_selector.py  reporting.py  snippet_matcher.py  speaker_labeling.py  transcription.py  utils.py
emotion/: analyzer.py  audio_model.py  constants.py  fusion.py  metrics.py  text_model.py  visual_model.py
io/: __init__.py  converter.py  downloader.py
labeling/: selector.py  session.py
myenv/: pyvenv.cfg
pipeline/: manager.py
reporting/: export.py  generator.py  plotting.py  summaries.py
speaker_id/: id_mapping.py  vid_preview_id.py
tests/: test_asr.py  test_labeling.py
tests/unit/: test_config.py  test_emotion.py  test_labeling.py  test_labeling_session.py  test_logging.py  test_reporting.py  test_transcription.py  test_utils.py
transcription/: segments.py  whisperx_wrapper.py
transmotify.egg-info/: PKG-INFO  SOURCES.txt
transmotify_io/: converter.py  downloader.py
ui/: init.py  interface.py  main_gui.py  postprocess_gui.py  webapp.py
utils/: file_manager.py  json.py  paths.py  subprocess.py  transcripts.py  wrapper.py
yt/: converter.py  downloader.py  metadata.py
